# k-kids-books

./: .gitignore  index.html  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-image-generation/: 02-01-PLAN.md  02-01-SUMMARY.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
bookforge/: __init__.py  calendar.py  config.py  review.py  state.py
bookforge/cli/: __init__.py  build.py  calendar.py  illustrate.py  new.py  publish.py  review.py
bookforge/images/: contact_sheet.py  provider.py  service.py
bookforge/publish/: covers.py  listing.py  package.py
bookforge/story/: __init__.py  generator.py  parser.py  schema.py  validator.py
bookforge/style/: __init__.py  loader.py  schema.py
books/dangun/: layout-f.html  layout-g.html  layout-options.html  preview.html  story.md
docs/: pipeline.md
style-guides/: korean-cute-watercolor.yaml
tests/: conftest.py  test_build_cli.py  test_calendar.py  test_calendar_cli.py  test_contact_sheet.py  test_flux_provider.py  test_generator.py  test_illustrate_cli.py  test_image_provider.py  test_image_service.py  test_listing.py  test_new_command.py  test_pdf_export.py  test_publish.py  test_publish_cli.py  test_review.py  test_review_cli.py  test_schemas.py  test_story_parser.py  test_style_loader.py  test_template.py
(+23 files in other folders)
